bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: not found: value litmessage
   litmessage match {
   ^