bdr.BDR2.scala.code

while (estSurMessage) {
   litmessage match {
     case "R" => droite;avance;
     case "L" => gauche;avance;
     case "I"=> left;left;avance;
     case "A"=> avance;
     case "B"=> avance ; avance;
     case "C"=> avance ; avance ; avance;
     case "D"=> avance ; avance ;avance; avance ;
     case "E" => avance ;avance ;avance ;avance ; avance ;
     case "F" =>  avance ;avance ;avance ;avance ; avance ;avance ;
     case "Z"=> recule ;
     case "Y"=> recule ; recule ;
     case "X" => recule ; recule ; recule ;
     case "W" => recule ; recule ; recule ; recule ;
   }
}